--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 
 	"name": "REEE",
 	"description": "REcommendation Engine Extension",
-	"homepage_url": "https://example.com/",
+	"homepage_url": "https://github.com/dogfuntom/REEE",
 
-	"version": "0.1.0",
+	"version": "0.1.1",
 
 	"permissions": ["history", "storage"],
 
@@ -15,7 +15,6 @@
 
 	"browser_specific_settings": {
 		"gecko": {
-			"id": "reee@reee.com",
 			"strict_min_version": "52.0"
 		}
 	},
@@ -29,7 +28,6 @@
 
 	"background": {
     "scripts": [
-			"common/browser-polyfill.min.js",
 			"background.js"
 		]
   }
