--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,4 +1,8 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "target": "es2020",
+    "checkJs": true,
+    "module": "esnext"
+  },
   "exclude": ["node_modules", "**/node_modules/*"]
 }
