--- a/_node/package.json
+++ b/_node/package.json
@@ -10,6 +10,9 @@
   "license": "UNLICENSED",
   "private": "true",
   "dependencies": {
+    "@metamask/providers": "^8.1.1",
+    "detect-browser": "^5.3.0",
+    "extension-port-stream": "^2.0.1",
     "metamask-extension-provider": "^3.0.0"
   },
   "devDependencies": {
