--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,7 +5,8 @@
 	// List of extensions which should be recommended for users of this workspace.
 	"recommendations": [
 		"firefox-devtools.vscode-firefox-debug",
-		"denoland.vscode-deno"
+		"denoland.vscode-deno",
+		"tintinweb.vscode-inline-bookmarks"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": [
