🔖 update for chrome

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,13 @@
 {
     "editor.tabSize": 2,
-    "standard.validate": [
-
-        "javascript",
-    ],
-    "deno.lint": true,
-    "deno.unstable": false,
-    "deno.suggest.imports.hosts": {
-        "https://esm.sh": false,
-        "https://unpkg.com": false
-    },
     "cSpell.words": [
         "Reee",
         "reinit"
     ],
-    "firefox.profile": "MetaMask_Test"
+    "firefox.profile": "MetaMask_Test",
+    "files.exclude": {
+        "**/*.js": { "when": "$(basename).ts" },
+        "**/**.js": { "when": "$(basename).tsx" },
+        "_node/bundle.js": true
+    },
 }
