--- a/_node/package.json
+++ b/_node/package.json
@@ -11,8 +11,7 @@
   "private": "true",
   "dependencies": {
     "@metamask/providers": "^8.1.1",
-    "detect-browser": "^5.3.0",
-    "extension-port-stream": "^2.0.1"
+    "webextension-polyfill": "^0.8.0"
   },
   "devDependencies": {
     "browser-resolve": "^2.0.0",
