--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,5 +4,5 @@
     "checkJs": true,
     "module": "esnext"
   },
-  "exclude": ["node_modules", "**/node_modules/*"]
+  "exclude": ["node_modules", "**/node_modules/*", "*bundle.js"]
 }
