node.js, MetaMask, sign in, data exchange with blockchain backend (#7)
* :pencil: information about MetaMask pitfalls

* ✨ MetaMask login prototype

* 💄♻️ moved MetaMask stuff to its own page

(currently it's only the Kovan login button)

* ✨ tracking REEE tokens

* ✨ login through real backend

* updated root url

* ♻️ minor changes

(this changes are unimportant but
I still have to commit them before changing branches)

* 🏗 switch from deno to node.js

because metamask-extension-provider is acting up in deno
(because it's rotten (obsolete) already)

* ➖⬆️ got rid of metamask-extension-provider

(because it's rotten)

* 🚸🐛 fixed PrototypeButton showing [Object object]

(instead of showing a error itself)

* ⬆️ force-upgraded peer sub-dependencies with

deprecation and security warning

* 🔧💄 updated coin contract address

* 🔊 tidy up

* 🔖 update for chrome

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,13 @@
 {
     "editor.tabSize": 2,
-    "standard.validate": [
-
-        "javascript",
-    ]
+    "cSpell.words": [
+        "Reee",
+        "reinit"
+    ],
+    "firefox.profile": "MetaMask_Test",
+    "files.exclude": {
+        "**/*.js": { "when": "$(basename).ts" },
+        "**/**.js": { "when": "$(basename).tsx" },
+        "_node/bundle.js": true
+    },
 }
